# rpb_turtlebot3

./: README.md  bridge_config.yaml
project1/ref/: SUBMISSION_GUIDE.md  SUBMISSION_INFO.md  final_review_summary.md
project1/ros2_ws/src/rover_line_follower/: package.xml  setup.py
project1/ros2_ws/src/rover_line_follower/resource/: rover_line_follower
project1/ros2_ws/src/rover_line_follower/rover_line_follower/: __init__.py  line_follower_node.py  tune_bev.py
project1/ros2_ws/src/simulation/: CMakeLists.txt  package.xml
project1/ros2_ws/src/simulation/launch/: simulation.launch.py  upload_robot.launch.py
project1/ros2_ws/src/simulation/models/track/: model.sdf
project1/ros2_ws/src/simulation/urdf/: my_rover.urdf.xacro
rover_line_follower/: BEV_TUNING_GUIDE.md  CMakeLists.txt  EXPERIMENT_GUIDE.md  setup.py
rover_line_follower/launch/: line_follower.launch.py  start.launch.py  start_with_bag.launch.py  tune_bev.launch.py  tune_bev_with_bag.launch.py
rover_line_follower/rover_line_follower/: bev_distance_fix_solutions.md  hsv_tuner.py  line_follower_node.py  tune_bev.py
rover_line_follower/src/: camera_viewer.cpp
src/my_bridge_config/: bridge_config.yaml
src/rover_line_follower/: CMakeLists.txt
src/rover_line_follower/launch/: line_follower.launch.py
src/rover_line_follower/rover_line_follower/: teleop_keyboard.py
src/rover_line_follower/src/: camera_viewer.cpp
src/test_lifecycle/: CMakeLists.txt  package.xml
src/test_lifecycle/config/: domain_bridge_robot3.yaml
src/test_lifecycle/launch/: multi_node_launch.py  robots_launch.py  turtlebot_bridge_launch.py
src/test_lifecycle/src/: gcs.cpp  node2.cpp
turtlebot_ws/: TURTLEBOT_SETUP.md
turtlebot_ws/ref/: assignment.txt  lab10_domain_bridge, dds.txt
turtlebot_ws/src/test_lifecycle/config/: domain_bridge_robot1.yaml  domain_bridge_robot2.yaml  domain_bridge_turtlebot.yaml
turtlebot_ws/src/test_lifecycle/launch/: gcs_launch.py
turtlebot_ws/src/test_lifecycle/src/: lifecycle_manager.cpp  node1.cpp  node3.cpp  node4.cpp
