<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_line_follower</name>
  <version>0.0.1</version>
  <description>line follower node</description>

  <maintainer email="user@example.com">Project1</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool: ament_cmake만 사용 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 공통 의존성 -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>builtin_interfaces</depend>

  <!-- pip로 설치하는 의존성은 exec_depend로 둘 수 있음 -->
  <exec_depend>opencv-python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- build_type은 ament_cmake 하나만 -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
